--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ Authors@R:
            email = "vfquirin@gmail.com",
            comment = c(ORCID = "0000-0002-5150-2735"))
 Description: What the package does (one paragraph).
-License: What license it uses
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+URL: https://github.com/vfquirin/foofactors
+BugReports: https://github.com/vfquirin/foofactors/issues
