--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,6 @@ LazyData: true
 RoxygenNote: 6.1.1
 URL: https://github.com/vfquirin/foofactors
 BugReports: https://github.com/vfquirin/foofactors/issues
+Imports:
+  forcats
+  
